edit functionality implementerd btn not working

--- a/views/entries.mustache
+++ b/views/entries.mustache
@@ -8,6 +8,9 @@
   <a href="/new" class="btn btn-primary">
     Write in the Menu
   </a>
+ <a href="/edit" class="btn btn-primary">
+    Edit
+  </a>
 </div>
 {{#entries}}
 <div class="card">
