--- a/views/menu.mustache
+++ b/views/menu.mustache
@@ -184,7 +184,7 @@ nav a:hover::before {
 
     <div class="banner">
         <div id="bubble">
-            <h1 id="bannertitle">Menue </h1>
+            <h1 id="bannertitle">Menu </h1>
         </div>
     </div>
 
