--- a/views/updateEntry.mustache
+++ b/views/updateEntry.mustache
@@ -4,24 +4,24 @@
 </head>
 <body class="container">
 <h2>Write a new entry</h2>
-    <form method="post" role="form" action="/new">
+    <form method="post" role="form" action="/edit">
         <div class="form-group">
             <label for="prices">Price</label>
-            <input type="text" class="form-control" id="prices" name="prices" placeholder="Enter price" required>
+            <input type="text" class="form-control" id="prices" name="prices" placeholder="Enter the new price" required>
         </div>
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Enter the name of the dish" required>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Enter the name of the dish you wish to edit" required>
         </div>
         <div class="form-group">
             <label for="description">Enter description</label>
-            <textarea class="form-control" id="description" name="description" placeholder="Enter the description here." rows="3"    required>
+            <textarea class="form-control" id="description" name="description" placeholder="Enter the new description here." rows="3"    required>
             </textarea>
         </div>
 
         <div class="form-group">
             <label for="allergyadvice">Enter allergy advice</label>
-            <textarea class="form-control" id="allergyadvice" name="allergyadvice" placeholder="Enter the allergy advice here." rows="3"    required>
+            <textarea class="form-control" id="allergyadvice" name="allergyadvice" placeholder="Enter the new allergy advice here." rows="3"    required>
             </textarea>
         </div>    
 
