--- a/views/newEntry.mustache
+++ b/views/newEntry.mustache
@@ -1,7 +1,13 @@
 <html lang="en">
 <head>
 {{>header}}
+<style>
+body{
+    background: #F3F3EC;
+}
+</style>
 </head>
+
 <body class="container">
 <h2>Write a new entry</h2>
     <form method="post" role="form" action="/new">
