--- a/views/menu.mustache
+++ b/views/menu.mustache
@@ -194,6 +194,8 @@ nav a:hover::before {
         <a href="/new" class="btn btn-primary">
               Write in the Menu
         </a>
+        <a herf="/edit" class="btn btn-danger">Edit menu</a>
+
     </div>
     {{#entries}}
     <div class="card">
@@ -203,8 +205,9 @@ nav a:hover::before {
                 {{description}}
             </p>
         <div class="card-footer">
-            <p> £ <a href="/posts/{{prices}}">{{prices}}</a> Warning: {{allergyadvice}}</p>
+            <p> £{{prices}}</a> Warning: {{allergyadvice}}</p>
         </div>
+        
         </div>
         
 {{/entries}}
