--- a/views/updateEntry.mustache
+++ b/views/updateEntry.mustache
@@ -27,7 +27,7 @@
 
 
         <div class="form-group">
-            <input type="submit" value="Post dish" class="btn btn-primary">
+            <input type="submit" value="Update dish" class="btn btn-primary">
         </div>
     </form>
 </body>
