--- a/views/entries.mustache
+++ b/views/entries.mustache
@@ -10,6 +10,7 @@
   <a href="/new" class="btn btn-primary">
     Write in the Menu
   </a>
+  <a herf="/edit" class="btn btn-danger">Edit menu</a>
 </div>
 {{#entries}}
 <div class="card">
