--- a/views/menu.mustache
+++ b/views/menu.mustache
@@ -187,6 +187,7 @@ nav a:hover::before {
             <h1 id="bannertitle">Menu </h1>
         </div>
     </div>
+ 
 
 <div class= "entriesbox">
 
@@ -194,8 +195,10 @@ nav a:hover::before {
         <a href="/new" class="btn btn-primary">
               Write in the Menu
         </a>
-        <a herf="/edit" class="btn btn-danger">Edit menu</a>
-
+        <a href="/edit" class="btn btn-info">
+             Edit Menu
+        </a>
+       
     </div>
     {{#entries}}
     <div class="card">
@@ -206,6 +209,7 @@ nav a:hover::before {
             </p>
         <div class="card-footer">
             <p> £{{prices}}</a> Warning: {{allergyadvice}}</p>
+               
         </div>
         
         </div>
